<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorText"
    >

    <ImageView
        android:id="@+id/im_umobile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/umobile_eus"/>

    <TextView
        android:id="@+id/tv_native"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/im_umobile"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/native_app"
        android:typeface="serif"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="14dp"
        android:textColor="@color/colorButton"
        />
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_below="@+id/tv_native"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/bt_oi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/oi"
            android:typeface="serif"
            android:textStyle="italic"
            android:textSize="14dp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_corner"
            />
        <Button
            android:id="@+id/bt_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_oi"
            android:layout_marginRight="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/nowat"
            android:typeface="serif"
            android:textStyle="italic"
            android:textSize="14dp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_corner"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/rl_top"
        android:layout_centerHorizontal="true"
        >

         <Button
           android:id="@+id/bt_pml"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:text="@string/pml"
           android:typeface="serif"
           android:textStyle="italic"
           android:textSize="14dp"
           android:textColor="@color/colorText"
           android:background="@drawable/button_corner"
        />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/services"
        android:typeface="serif"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="18dp"
        android:textColor="@color/colorButton"
        />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_below="@+id/tv_services"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/bt_contextualization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/context"
            android:typeface="serif"
            android:textStyle="italic"
            android:textSize="15dp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_corner"

            />
        <Button
            android:id="@+id/bt_direct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_contextualization"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/direct"
            android:typeface="serif"
            android:textStyle="italic"
            android:textSize="15dp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_corner"
            />
        <Button
            android:id="@+id/bt_sharing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_direct"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/sharing"
            android:typeface="serif"
            android:textStyle="italic"
            android:textSize="15dp"
            android:textColor="@color/colorText"
            android:background="@drawable/button_corner"
            />

    </RelativeLayout>
 </RelativeLayout>
